[package]
name = "neodos-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeoDOS Language Server Protocol implementation"

[[bin]]
name = "neodos-lsp"
path = "src/main.rs"

[dependencies]
neodos-toolkit = { path = "../neodos-toolkit" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
lsp-types.workspace = true
url.workspace = true
lsp-server = "0.7"
crossbeam = "0.8"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
