[package]
name = "neodos-toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared library for NeoDOS developer tools — database, indexer, parsers, analysis"

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rayon.workspace = true
walkdir.workspace = true
lsp-types.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
